--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,6 +4,8 @@
     "com.unity.feature.development": "1.0.1",
     "com.unity.multiplayer.tools": "1.0.0",
     "com.unity.netcode.gameobjects": "1.2.0",
+    "com.unity.services.lobby": "1.0.3",
+    "com.unity.services.relay": "1.0.5",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.2",
     "com.unity.ugui": "1.0.0",
